Added humidity status, placename and changed the CSS

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,3 +53,8 @@ button {
     padding: 8px;
     border: 1px solid #888888;
 }
+
+#message-1, #message-2 {
+    color: #888888;
+    font-weight: bold;
+}
